Se agrego la logica para eliminar todos los productos